--- a/src/admin.html
+++ b/src/admin.html
@@ -4,37 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/admin.js" defer></script>
 </head>
 <body>
-    <div class="container">
-        <h1>Admin Dashboard</h1>
-        <form id="event-form">
-            <h2>Add Event Details</h2>
-            <label for="event-name">Event Name:</label>
-            <input type="text" id="event-name" required>
-            <label for="event-date">Event Date:</label>
-            <input type="date" id="event-date" required>
-            <label for="event-location">Event Location:</label>
-            <input type="text" id="event-location" required>
-            <button type="submit">Add Event</button>
-        </form>
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Admin Dashboard</h1>
+        
+        <!-- Password Protection -->
+        <div id="password-protection" class="text-center">
+            <div class="form-group">
+                <label for="admin-password">Enter Admin Password:</label>
+                <input type="password" class="form-control" id="admin-password" required>
+                <div class="invalid-feedback">Please enter the correct password.</div>
+            </div>
+            <button id="password-submit" class="btn btn-primary">Submit</button>
+        </div>
 
-        <h2>Registered Users</h2>
-        <table id="registration-table">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Event</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Registered users will be populated here -->
-            </tbody>
-        </table>
+        <!-- Admin Content -->
+        <div id="admin-content" class="d-none">
+            <form id="event-form" class="mb-4">
+                <h2>Add Event Details</h2>
+                <div class="form-group">
+                    <label for="event-name">Event Name:</label>
+                    <input type="text" class="form-control" id="event-name" required>
+                </div>
+                <div class="form-group">
+                    <label for="event-date">Event Date:</label>
+                    <input type="date" class="form-control" id="event-date" required>
+                </div>
+                <div class="form-group">
+                    <label for="event-location">Event Location:</label>
+                    <input type="text" class="form-control" id="event-location" required>
+                </div>
+                <button type="submit" class="btn btn-success">Add Event</button>
+            </form>
+
+            <h2>Registered Users</h2>
+            <table class="table table-striped" id="registration-table">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Event</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Registered users will be populated here -->
+                </tbody>
+            </table>
+        </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
