now adding the dataset to reddis

--- a/src/admin.html
+++ b/src/admin.html
@@ -24,6 +24,7 @@
 
         <!-- Admin Content -->
         <div id="admin-content" class="d-none">
+            <div id="status-message" class="alert d-none"></div> <!-- Status message element -->
             <form id="event-form" class="mb-4">
                 <h2>Add Event Details</h2>
                 <div class="form-group">
@@ -55,6 +56,9 @@
                     <!-- Registered users will be populated here -->
                 </tbody>
             </table>
+        </div>
+        <div class="text-center mt-4">
+            <p>Version: <span id="version-number">v.0.0.17</span></p> <!-- Version number element -->
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
