--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Event Registration</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/main.js" defer></script>
 </head>
 <body>
     <div class="container mt-5">
@@ -44,10 +45,10 @@
             <button type="submit" class="btn btn-primary btn-block">Register</button>
         </form>
         <div id="confirmationMessage" class="alert alert-success mt-4 d-none"></div>
+        <div id="statusMessage" class="alert d-none mt-4"></div> <!-- Status message element -->
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
 </body>
 </html>
