--- a/src/index.html
+++ b/src/index.html
@@ -10,27 +10,27 @@
 </head>
 <body>
     <div class="container mt-5">
-        <div class="text-center mb-4">
-            <pre id="asciiHeadline" class="d-inline-block">
-                             _   
-                            | |  
-         _____   _____ _ __ | |_ 
-        / _ \ \ / / _ \ '_ \| __|
-        |  __/\ V /  __/ | | | |_ 
-        \___| \_/ \___|_| |_|\__|
-            </pre>
+        <!-- Dynamic Header -->
+        <div id="eventBanner" class="card text-center mb-4">
+            <div class="card-body">
+                <h1 id="dynamicHeadline" class="card-title mb-0">Loading event...</h1>
+            </div>
         </div>
-        <h1 class="text-center mb-4">Register for the Event</h1>
+
         <div id="eventDetails" class="text-center mb-4">
             <p id="eventName" class="h4"></p>
             <p id="eventDate" class="h5 text-muted"></p>
             <p id="eventLocation" class="h5 text-muted"></p>
         </div>
+
+        <!-- Company Domain (Password) -->
         <div class="form-group">
-            <label for="companyDomain">Company Domain</label>
+            <label for="companyDomain">Company Domain (Password)</label>
             <input type="text" class="form-control" id="companyDomain" required>
-            <div class="invalid-feedback">Please enter the company domain.</div>
         </div>
+        <button id="domainSubmit" class="btn btn-primary mb-3">Proceed</button>
+
+        <!-- Registration Form -->
         <form id="registrationForm" class="needs-validation d-none" novalidate>
             <div class="form-group">
                 <label for="name">Name:</label>
@@ -47,11 +47,11 @@
                 <input type="tel" class="form-control" id="phone" name="phone" required>
                 <div class="invalid-feedback">Please enter your phone number.</div>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Register</button>
+            <button type="submit" class="btn btn-success btn-block">Register</button>
         </form>
-        <button id="domainSubmit" class="btn btn-primary btn-block">Proceed</button>
+
         <div id="confirmationMessage" class="alert alert-success mt-4 d-none"></div>
-        <div id="statusMessage" class="alert d-none mt-4"></div> <!-- Status message element -->
+        <div id="statusMessage" class="alert d-none mt-4"></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
